Fix bug for wrapissue on bigger screen size

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,7 +79,7 @@ header nav ul {
 }
 
 nav a {
-  font-family: 'Ubunru', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   vertical-align: bottom;
   font-size: 1rem;
@@ -246,7 +246,7 @@ header .mobile {
 }
 
 .banner a  {
-  font-family: 'Ubunru', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   font-size: 1.3rem;
   text-align: center;
@@ -365,7 +365,7 @@ header .mobile {
 .vidTxt,.videoSidebar,.vidsideContainer,
 .pictures,.txt,.foot,.square,.reserved,
 .rectangle,.videoContainer h1,
-.videoContainer,#grey .container {
+.videoContainer,#grey .container{
   display: none;
 }
 
@@ -481,9 +481,6 @@ header .mobile {
   .learning,.square {
     display: none;
   }
-  {
-    display: none;
-  }
 }/*..closinf tag media..*/
 
 .thesisContainer{
@@ -512,10 +509,10 @@ header .mobile {
   padding: 1rem 0rem 1rem 2rem;
   bottom: -150rem;
 }
-} /*...closing tag media ....... important...*/
+} /*...closing external media tag ....important...*/
 
 
-@media only screen and (min-width: 1025px){
+@media only screen and (min-width: 1025px) {
   .UppermidMobile img,.UppermidMobile,.mobileContainer,
   .imgmob,.info,.mobileH3,.mobileP,.Lowermid{
     display: none;
@@ -668,8 +665,25 @@ header .mobile {
   padding-right: 4.5rem;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   overflow: hidden;
+  max-width: 80rem;
 }
+@media only screen and (max-width: 2560px) {
+  .learnContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 80rem;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    /*...........checking......*/
+  }
+}
+
 
 .learnbox{
   display: flex;
@@ -865,23 +879,24 @@ header .mobile {
   width: 100%;
   height: 100px;
 
-  margin-top: 6.25rem;  /*...100px...*/
+  margin-top: 6.25rem;
 }
+
 .square{
   display: block;
   width: 100%;
-  height: 6.25rem;  /*...100px..*/
+  height: 6.25rem;
   border-top: 1px solid lightgrey;
 }
+
 .reserved h4{
   display: inline-flex;
   width: 50%;
   padding-top: 1rem;
   padding-left: 1.5rem;
   font-size: 0.8rem;
-
-
 }
+
 .rectangle h5{
   position: relative;
   display: inline-flex;
